# assistant-for-grab

./: .gitignore  README.md  makefile  package.json
app/client/: package.json
app/server/: pyproject.toml
app/server/tests/: lc.py
